# flippy

./: .gitignore  CMakeLists.txt  Dockerfile  LIS3MDL.py  LSM6D.py  LSM6DS33.py  README.md  config.txt  docker-build.sh  docker-run.sh  flippy.code-workspace  imu_test.py  test.py
include/: ConfigReader.h  Controller.h  Encoder.h  HwImpl.h  LSM6DS33.h  Motor.h  hw_config.h  motor.h  pin_config.h  pin_mapping.h
src/: ConfigReader.cpp  Controller.cpp  Encoder.cpp  HwImpl_pigpio_if2.cpp  HwImpl_wiringpi.cpp  LSM6DS33.cpp  Motor.cpp  main.cpp  motor.cpp  pin_mapping.cpp
test/: CMakeLists.txt  manual_test_controller.cpp  manual_test_imu.cpp  manual_test_motor.cpp
